# nexus_mod_manager

./: PyNexus Mod Manager.spec  build_windows_app.bat  nexus-mod-manager.bat  pyproject.toml  start.sh
.qt_for_python/uic/: MainWindow.py  MainWindow2.py  dlgAddGame.py  dlgAddMod.py  dlgManageProfile.py  dlgManageProfiles.py  dlgSettings.py  frm_add_api_key.py
app/: Games.py  Keyring.py  MainApplication.py  MainWindow.py  MainWindow2.py  Mods.py  NexusModsAPI.py  __init__.py  dlgAddGame.py  dlgAddMod.py  dlgManageProfiles.py  dlgSettings.py  main.py  nxmLink.py  test_app.py  util.py
app/ui/: MainWindow.py  MainWindow2.py  dlgAddGame.py  dlgAddMod.py  dlgManageProfiles.py  dlgSettings.py
app/uic/: MainWindow.ui  MainWindow2.ui  dlgAddGame.ui  dlgAddMod.ui  dlgManageProfiles.ui  dlgSettings.ui
hooks/: hook-keyring.py
