[tool.poetry]
name = "nexus_mod_manager"
version = "0.1.0"
description = ""
authors = ["Michael Gusek <michael.gusek@web.de>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
PyQt6 = "^6.1.1"
keyring = "^23.1.0"
SecretStorage = "^3.3.1"
patool = "^1.12"
pyunpack = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
